--- a/index.html
+++ b/index.html
@@ -6,13 +6,16 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Document</title>
+	<link rel="stylesheet" href="src/main.css">
 </head>
 
 <body>
 	<h1>
 		Hello world
 		Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, repellendus.
-		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid nisi sunt cumque, porro corrupti numquam alias earum esse excepturi, expedita mollitia, repellendus quisquam delectus culpa! Earum esse deleniti accusantium voluptates?
+		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid nisi sunt cumque, porro corrupti numquam alias
+		earum esse excepturi, expedita mollitia, repellendus quisquam delectus culpa! Earum esse deleniti accusantium
+		voluptates?
 	</h1>
 </body>
 
