--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Document</title>
 	<link rel="stylesheet" href="src/main.css">
+	<link rel="stylesheet" href="src/main2.css">
 </head>
 
 <body>
